--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,2 +1,4 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
+hogefuga:
+  name: "hogefuga"
+  user_id: "@hogefuga"
+  password_digest: <%= User.digest('password') %>
