--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,6 +2,7 @@ hogefuga:
   name: "hogefuga"
   user_id: "@hogefuga"
   password_digest: <%= User.digest('password') %>
+  admin: ture
 
 archer:
   name: "Sterling Archer"
