--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,7 +2,7 @@ hogefuga:
   name: "hogefuga"
   user_id: "@hogefuga"
   password_digest: <%= User.digest('password') %>
-  admin: ture
+  admin: true
 
 archer:
   name: "Sterling Archer"
