--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -60,9 +60,9 @@ jobs:
         run: bundle exec rubocop --parallel
         
       # Renderへのデプロイ
-      - uses: ttskch/render-deploy@v1.0.0
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
         with:
           api-key: ${{ secrets.RENDER_API_KEY }}
           service-id: ${{ secrets.RENDER_SERVICE_ID }}
-          interval: 20
-          timeout: 300 
+          wait-for-success: true
