--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -10,6 +10,13 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+
+  env:
+    AWS_REGION: ap-northeast-1
+    ECS_SERVICE: simple-cicd-service
+    ECS_CLUSTER: simple-cicd-cluster
+    ECS_TASK_DEFINITION: .aws/task-definition.json
+
 test_rails:
   test:
     runs-on: ubuntu-latest
@@ -90,7 +97,7 @@ test_rails:
       - name: Push the image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{ secrets.AWS_ECR_WEB_SERVER_REPOSITORY }}
+          ECR_REPOSITORY: ${{ secrets.AWS_ECR_API_SERVER_REPOSITORY }}
         run: |
           docker image tag api_image:latest $ECR_REGISTRY/$ECR_REPOSITORY:latest
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
