--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -81,7 +81,7 @@ jobs:
 
       - name: Build an Image and Run Tests
         run: |
-          docker image build --target production -t api_image:latest
+          docker image build --platform linux/amd64 --target production -t api_image:latest .
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -113,7 +113,7 @@ jobs:
 
       - name: Build an Image and Run Tests
         run: |
-          docker image build --target production -t web_image:latest
+          docker image build --platform linux/amd64 --target production -t web_image:latest .
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
