--- a/test/fixtures/skills.yml
+++ b/test/fixtures/skills.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  skill_name: MyString
-  skill_category: MyString
+  skill_name: one
+  skill_category: one_ca
 
 two:
-  skill_name: MyString
-  skill_category: MyString
+  skill_name: two
+  skill_category: two__ca
