--- a/test/fixtures/user_skills.yml
+++ b/test/fixtures/user_skills.yml
@@ -3,9 +3,9 @@
 one:
   user_id: 1
   skill_id: 1
-  detail: MyString
+  detail: "one"
 
 two:
   user_id: 1
-  skill_id: 1
-  detail: MyString
+  skill_id: 2
+  detail: "two"
