デプロイ先を変更

--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -13,7 +13,7 @@ on:
 
 env:
   AWS_REGION: ap-northeast-1
-  ECS_SERVICE: Iam-service
+  ECS_SERVICE: iam-alb-service
   ECS_CLUSTER: Iam-cluster
   ECS_TASK_DEFINITION: .aws/task-definition.json
 
